<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayoutdevices"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="220dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/im_logo"
        app:layout_constraintStart_toEndOf="@+id/im_clg_logo"
        app:layout_constraintTop_toTopOf="@id/im_clg_logo"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="Next" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/im_clg_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/dayanand_college"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/white_logo"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <TextView
        android:id="@+id/tv_automated_library"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:text="Automated Library Dropbox"
        android:textColor="@color/default_color"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/im_logo"
        app:layout_constraintBottom_toBottomOf="@+id/im_clg_logo"
        app:layout_constraintStart_toEndOf="@+id/im_clg_logo"
        app:layout_constraintTop_toTopOf="@+id/im_clg_logo" />

    <ImageView
        android:id="@+id/im_book_logo"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:background="@drawable/book"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_automated_library"
        app:layout_constraintEnd_toEndOf="@+id/tv_automated_library"
        app:layout_constraintStart_toStartOf="@+id/tv_automated_library"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTestUSB"
        android:layout_width="700dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:text="Click Here"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTint="@color/default_color"
        app:layout_constraintStart_toStartOf="@+id/im_clg_logo"
        app:layout_constraintEnd_toEndOf="@+id/im_logo"
        app:layout_constraintTop_toBottomOf="@+id/im_book_logo"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:text="Clear"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/default_color"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btnTestUSB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>


    


    <TextView
        android:id="@+id/textViewTicketType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:text="@string/tickettype" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButtonTicket58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/tickettype58mm" />

        <RadioButton
            android:id="@+id/radioButtonTicket80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tickettype80mm" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewHardware"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="@string/hardwarefunction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBoxCutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/cutter" >
        </CheckBox>

        <CheckBox
            android:id="@+id/checkBoxDrawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drawer" >
        </CheckBox>

        <CheckBox
            android:id="@+id/checkBoxBeeper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/beeper" >
        </CheckBox>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewPrintCount"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="@string/printcount" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButtonPrintCount1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/count1" />

        <RadioButton
            android:id="@+id/radioButtonPrintCount10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count10" />

        <RadioButton
            android:id="@+id/radioButtonPrintCount100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count100" />

        <RadioButton
            android:id="@+id/radioButtonPrintCount1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count1000"
            android:visibility="gone" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewPrintContent"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="@string/printcontent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButtonPrintContentS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/radioButtonPrintContentM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/middle" />

        <RadioButton
            android:id="@+id/radioButtonPrintContentL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/large" />
    </RadioGroup>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBoxAutoPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoprint" >
        </CheckBox>

        <CheckBox
            android:id="@+id/checkBoxPictureCompress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitmapcompress" >
        </CheckBox>
        
    </LinearLayout>



</LinearLayout>